# waste-collection-detection

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
configs/: .env.example
data/: README.md
data/processed/splits/: test.csv  train.csv  val.csv
docs/: IMPLEMENTATION_PLAN.md  PRD.md  TDD.md
models/metadata/: _example.json
notebooks/: colab_train_eval.ipynb
requirements/: requirements-dev.txt  requirements-train.txt  requirements.txt
scripts/: evaluate.py  export.py  generate_test_fixtures.py  preprocess.py
src/waste_classification/: __init__.py  config.py  logging_config.py
src/waste_classification/data/: dataset.py  preprocessing.py
src/waste_classification/inference/: export.py
src/waste_classification/models/: factory.py
src/waste_classification/training/: metrics.py  trainer.py
tests/integration/: test_dataset.py  test_export.py  test_trainer.py
tests/smoke/: test_smoke.py
tests/unit/: test_factory.py  test_metrics.py  test_preprocessing.py
