[project]
name = "waste-classification"
version = "0.1.0"
description = "Computer vision project: waste classification system"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=9.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.9.0",
    "imagehash>=4.3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
train = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "onnx>=1.14",
    "onnxruntime>=1.16",
]
api = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "onnxruntime>=1.16",
]
ui = [
    "streamlit>=1.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/waste_classification"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
